@@ -36,7 +36,7 @@ public class SoftReferenceTest extends junit.framework.TestCase {
      */
     public void test_ConstructorLjava_lang_ObjectLjava_lang_ref_ReferenceQueue() {
         ReferenceQueue rq = new ReferenceQueue();
-        bool = new Boolean(true);
+        bool = Boolean.valueOf(true);
         try {
             SoftReference sr = new SoftReference(bool, rq);
             assertTrue("Initialization failed.", ((Boolean) sr.get())
@@ -58,7 +58,7 @@ public class SoftReferenceTest extends junit.framework.TestCase {
      * java.lang.ref.SoftReference#SoftReference(java.lang.Object)
      */
     public void test_ConstructorLjava_lang_Object() {
-        bool = new Boolean(true);
+        bool = Boolean.valueOf(true);
         try {
             SoftReference sr = new SoftReference(bool);
             assertTrue("Initialization failed.", ((Boolean) sr.get())
@@ -72,7 +72,7 @@ public class SoftReferenceTest extends junit.framework.TestCase {
      * java.lang.ref.SoftReference#get()
      */
     public void test_get() {
-        bool = new Boolean(false);
+        bool = Boolean.valueOf(false);
         SoftReference sr = new SoftReference(bool);
         assertTrue("Same object not returned.", bool == sr.get());
     }
